MathsParser/grammar.txt
# Credit to: https://itnext.io/writing-a-mathematical-expression-parser-35b0b78f869e

EXPRESSION
    : ADDITION
    ;

ADDITION
    : ADDITION ('+' | '-') CALL
    | CALL
    ;

CALL
    : MULTIPLICATION
    | identifier CALL
    | identifier '(' EXPRESSION [',' EXPRESSION]* ')'
    ;

MULTIPLICATION
    : MULTIPLICATION ('*' | '/') EXPONENTIATION
    | EXPONENTIATION
    ;

EXPONENTIATION
    : EXPONENTIATION '^' BASIC
    | BASIC
    ;

BASIC
    : number
    | identifier
    | string
    | '(' EXPRESSION ')'
    ;
